apps/server-web/src/renderer/App.css
@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Poppins:ital,wght@0,300;0,500;0,700;0,800;1,400;1,600&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100;1,200;1,300;1,400;1,700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --tw-color-dark--theme: #1e2025;
  --tooltipBackground: #000;
}

body {
  /* @apply bg-[#F2F2F2] dark:bg-[#1e2025]; */
  /* Background changes */
  @apply text-black dark:text-white;
  /* Text changes */
}

html.dark {
  --tooltipBackground: #000;
}

.font-poppins {
  font-family: 'Poppins' !important;
}

@layer base {
  html {
    font-family: 'Poppins', sans-serif;
  }

  * {
    @apply bg-transparent;
    /* @apply rounded-3xl !important; */
  }

  body {
    font-family:
      var(--font-sans), 'Plus-Jakarta-Sans-VariableFont_wght', 'Inter', 'Geist Sans', ui-sans-serif, system-ui,
      sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
    font-style: normal;
    font-weight: 400;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    overflow: hidden;
    @apply text-default dark:text-white;
  }

  .x-container {
    @apply 3xl:max-w-[1540px] 2xl:max-w-[1320px] xl:max-w-[1140px];
  }

  :root {
    --background: bg-trasparent;
    /* --foreground: 222.2 84% 4.9%; */

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --ring: 215 20.2% 65.1%;

    --radius: 0.5rem;
  }

  .dark {
    /* --background: 222.2 84% 4.9%; */
    /* --foreground: 210 40% 98%; */

    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;

    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;

    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;

    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;

    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 85.7% 97.3%;

    --ring: 217.2 32.6% 17.5%;
  }
}

@layer components {

  /* Colors custom */
  .bg-gray-lighter {
    @apply bg-[#F2F2F2] dark:bg-dark--theme-light;
  }

  /* --------------------- Container ------------------------------------ */
  .x-container {
    --tblr-gutter-x: 1.5rem;
    --tblr-gutter-y: 0;
    width: 100%;
    padding-right: calc(var(--tblr-gutter-x) * 0.5);
    padding-left: calc(var(--tblr-gutter-x) * 0.5);
    margin-right: auto;
    margin-left: auto;
  }

  /* ----------------Fade IN and Fade out */

  .fade-out {
    opacity: 0;
    width: 0;
    height: 0;
    transition:
      width 0.5s 0.5s,
      height 0.5s 0.5s,
      opacity 0.5s;
  }

  .fade-in {
    opacity: 1;
    width: 100%;
    height: 100%;
    transition:
      width 0.2s,
      height 0.2s,
      opacity 0.2s 0.2s;
  }

  /* ------------------- Input ----------------------- */
  .input-border {
    @apply border-[#00000021] dark:border-[#3b3c44] border-solid border;
    @apply dark:bg-[#1B1D22];
  }

  /* Shadow */
  .nav-items--shadow {
    box-shadow: 0px 14px 24px -10px rgba(0, 0, 0, 0.04);
  }

  .main--card-border {
    @apply border dark:border-[#28292F];
  }

  .scrollbar-hide::-webkit-scrollbar {
    display: none;
  }

  .scrollbar-hide {
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
  }

  .custom-scrollbar::-webkit-scrollbar {
    display: block;
    width: 8px;
    height: 5px;
    @apply dark:bg-[#7b7b7c] bg-gray-400;
  }

  .custom-scrollbar:hover::-webkit-scrollbar {
    padding: 1px;
  }

  .custom-scrollbar::-webkit-scrollbar-thumb {
    @apply dark:bg-[#484848] bg-gray-300;
  }

  /* Details Aside Bar */

  .details-label {
    @apply not-italic font-medium text-[0.625rem] leading-[140%] tracking-[-0.02em] text-[#A5A2B2] 2xl:text-xs;
  }
}

/* input */
.search-border {
  height: 33px;
}

.search-border .input-border {
  border-width: 0px !important;
  height: 40px;
}

.search-border .input-border input {
  height: 40px;
}

.search-border .input-border input::placeholder {
  color: #7e7991;
  font-size: 15px !important;
  /* font-weight: 500; */
  letter-spacing: 0.8px;
}

#file-upload input[type='file'] {
  display: none;
}

@font-face {
  font-family: 'Plus-Jakarta-Sans-VariableFont_wght';
  src: url('./styles/fonts/PlusJakartaSans-VariableFont_wght.ttf');
}

@font-face {
  font-family: 'Plus-Jakarta-Sans-Regular';
  src: url('./styles/fonts/PlusJakartaSans-Regular.ttf');
}

@font-face {
  font-family: 'Plus-Jakarta-Sans-Bold';
  src: url('./styles/fonts/PlusJakartaSans-Bold.ttf');
}

@font-face {
  font-family: 'Plus-Jakarta-Sans-Light';
  src: url('./styles/fonts/PlusJakartaSans-Light.ttf');
}

@font-face {
  font-family: 'Plus-Jakarta-Sans-Medium';
  src: url('./styles/fonts/PlusJakartaSans-Medium.ttf');
}

@font-face {
  font-family: 'Plus-Jakarta-Sans-SemiBold';
  src: url('./styles/fonts/PlusJakartaSans-SemiBold.ttf');
}

.search-class {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  background: #fcfcfc;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}

.theme-popup-scrollbar ::-webkit-scrollbar {
  display: none;
}

/* React Date picker */

.prose {
  max-width: unset !important;
}

@keyframes zoom-in-out {
  0% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.2);
  }

  100% {
    transform: scale(1);
  }
}

/* @keyframes pulse {
	0%,
	100% {
		opacity: 1;
	}
	50% {
		opacity: 1;
		transform: scale(1.2);
	}
} */

.progress-ring__circle {
  stroke-dasharray: 400, 400;
  transition: stroke-dashoffset 0.35s;
  transform: rotate(-90deg);
  transform-origin: 50% 50%;
}

@layer utilities {
  @layer responsive {
    .no-scrollbar::-webkit-scrollbar {
      display: block;
    }

    .no-scrollbar:hover::-webkit-scrollbar {
      display: block;
      width: 8px;
      height: 5px;
      @apply dark:bg-[#606062] bg-gray-300;
    }

    .no-scrollbar::-webkit-scrollbar-thumb {
      @apply dark:bg-dark--theme-light bg-gray-400;
    }

    .no-scrollbar {
      -ms-overflow-style: none;
      scrollbar-width: none;
    }

    .no-scrollbar:hover {
      -ms-overflow-style: auto;
      scrollbar-width: auto;
    }
  }
}

.dropdown:focus-within .dropdown-menu {
  opacity: 1;
  transform: translate(0) scale(1);
  visibility: visible;
}

.select-trigger {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border-radius: 4px;
  padding: 0 15px;
  font-size: 13px;
  line-height: 1;
  height: 35px;
  gap: 5px;
  background-color: white;
  color: var(--violet-11);
  box-shadow: 0 2px 10px var(--black-a7);
}

.select-trigger:hover {
  background-color: var(--mauve-3);
}

.select-trigger:focus {
  box-shadow: 0 0 0 2px black;
}

.select-trigger[data-placeholder] {
  color: var(--violet-9);
}

.select-icon {
  color: Var(--violet-11);
}

.select-content {
  overflow: hidden;
  background-color: white;
  border-radius: 6px;
  box-shadow:
    0px 10px 38px -10px rgba(22, 23, 24, 0.35),
    0px 10px 20px -15px rgba(22, 23, 24, 0.2);
}

.select-viewport {
  padding: 5px;
}

.select-item {
  font-size: 13px;
  line-height: 1;
  color: var(--violet-11);
  border-radius: 3px;
  display: flex;
  align-items: center;
  height: 25px;
  padding: 0 35px 0 25px;
  position: relative;
  user-select: none;
}

.select-item[data-disabled] {
  color: var(--mauve-8);
  pointer-events: none;
}

.select-item[data-highlighted] {
  outline: none;
  background-color: var(--violet-9);
  color: var(--violet-1);
}

.select-label {
  padding: 0 25px;
  font-size: 12px;
  line-height: 25px;
  color: var(--mauve-11);
}

.select-separator {
  height: 1px;
  background-color: var(--violet-6);
  margin: 5px;
}

.select-item-indicator {
  position: absolute;
  left: 0;
  width: 25px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.select-scroll-button {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 25px;
  background-color: white;
  color: var(--violet-11);
  cursor: default;
}

.switch-root {
  width: 42px;
  height: 25px;
  background-color: rgb(126 126 143 / var(--tw-bg-opacity));
  border-radius: 9999px;
  position: relative;
  box-shadow: 0 2px 10px rgb(96 165 250 / var(--tw-bg-opacity));
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.switch-root:focus {
  box-shadow: 0 0 0 2px black;
}

.switch-root[data-state='checked'] {
  @apply bg-violet-800;
}

.switch-thumb {
  display: block;
  width: 21px;
  height: 21px;
  background-color: white;
  border-radius: 9999px;
  box-shadow: 0 2px 2px var(--black-a7);
  transition: transform 100ms;
  transform: translateX(2px);
  will-change: transform;
}

.switch-thumb[data-state='checked'] {
  transform: translateX(19px);
}

.drag-region {
  -webkit-app-region: drag;
  height: 40px;
  /* Adjust height as needed */
  cursor: pointer;
  background: transparent;
}

.drag-region-windows {
  -webkit-app-region: drag;
  height: 30px;
  /* Adjust height as needed */
  cursor: pointer;
}

.drag-region::hover {
  cursor: pointer;
}

.content-start {
  margin-top: 40px;
}


.no-drag {
  -webkit-app-region: no-drag;
}

